subnets, special ip4 addresses, public and private addresses

--- a/Readwise/Articles/M140 Unit 12.md
+++ b/Readwise/Articles/M140 Unit 12.md
@@ -19,3 +19,40 @@
 - It isn’tpossibleto divide a complexnumberby0,just as it isn’tpossible to divide a realnumberby0.
 - ,if z is anon-zero complex number, then the number 1/z is calledthe reciprocal of z.
 - When you’re using complexnumbers as base numbers, you shouldbe careful to applyindexlawsonlyincases in which the indices (such as m and n above) are integers.
+## New highlights added February 6, 2025 at 6:05 PM
+### 2 Geometrywithcomplex numbers
+- howcomplexnumbers canberepresented by points in a plane, calledthe complexplane,
+#### 2.1The complexplane
+- Thecomplex plane The complex plane is a planeinwhich the complexnumber a + bi is representedbythe point(a, b).
+  The horizontalaxisiscalled the real axis andthe vertical axis is calledthe imaginaryaxis.
+- a unitgrid,which meansthatadjacenthorizontal lines in the grid are separated by one unit, andadjacentverticallines are alsoseparated by oneunit.
+- Let’sconsiderwhathappens in the complex plane whenyou addtwo complex numbers.
+- youget the complexnumberrepresented by the point (a + c, b + d).
+- you can addtwo complex numbers in the complex plane by drawing(or imagining)a parallelogram, as illustrated in Figure 6. This is the parallelogram law
+- So if you multiplythe complexnumberrepresented by the point(a, b)by the real number m,thenyou getthe complexnumberrepresented by the point(ma,mb)
+- Complexconjugation alsohas asimple geometric interpretation in the complex plane: the number z = a − bi is the imageof z = a + bi under reﬂection in the real axis,
+#### 2.2Modulus of a complex number
+- e modulus (or absolute value)ofa complex number z,which is denoted by |z|,isits distance from the origin, andisa measure ofits size.
+- Modulus of a complex number Let z = a + bi.The modulus |z| of z is itsdistance from the origin, given by |z| =  a2 + b2.
+  The pluralof‘modulus’ is moduli.
+- zz = a2 + b2.
+- The expression a2 + b2 is equal to |z|2,so wehavethe useful identity zz = |z|2.
+- |zw|2 = zwzw.
+- Youlearned earlier that zw = z w,so |zw|2 = zwzw = zwz w = zzww = |z|2|w|2.
+- Hence |zw|2 = |z|2|w|2,and taking square rootsgives the useful identity |zw| = |z||w|.
+- |z| =    z ×w w    =    z w    |w|,
+-    z w    = |z| |w| .
+- Properties of modulus zz = |z|2 |zw| = |z||w|    z w    = |z|
+- zz = |z|2 by z,
+- 1 z z = |z|2
+#### 2.3Argument of a complex number
+- Youcan completely specify a particular complex numberbystating its modulus, thatis, itsdistance from the origininthe complexplane, together with the direction in which it liesfrom the origin.
+- d by stating a particular angle
+- we call an argument of the complexnumber.
+- express the complexnumberina helpful form, called polarform,
+- Arguments of a complex number An argument of anon-zero complex number z is an angle in radians measured anticlockwisefrom the positive real axis to the line between the originand z.
+  The number 0 doesn’thaveanargument.
+- In fact,you cansee thateach non-zerocomplexnumberhas inﬁnitely manyarguments, because youcan addany integermultiple of2π to an argument to obtain anotherargument
+- Principal argumentofa complex number The principal argument of a non-zero complex number z is the argument of z thatliesinthe interval (−π, π]. Thisangle is denoted by Arg(z).
+- In some othertexts, the principalargument is calledthe principal value of theargument
+- The methodfor ﬁnding the principalargument of a complexnumberthat doesn’tlie on one ofthe axes is similar to the methodfor ﬁnding the direction of atwo-dimensional vector
