complex solutions of nth root

--- a/Readwise/Articles/M140 Unit 12.md
+++ b/Readwise/Articles/M140 Unit 12.md
@@ -56,3 +56,28 @@
 - Principal argumentofa complex number The principal argument of a non-zero complex number z is the argument of z thatliesinthe interval (−π, π]. Thisangle is denoted by Arg(z).
 - In some othertexts, the principalargument is calledthe principal value of theargument
 - The methodfor ﬁnding the principalargument of a complexnumberthat doesn’tlie on one ofthe axes is similar to the methodfor ﬁnding the direction of atwo-dimensional vector
+## New highlights added February 8, 2025 at 12:33 PM
+- andone of itsarguments. Polarformofa complex number Anon-zero complexnumber z is in polarform if it is expressed as z = r(cos θ + i sin θ).
+  Here r is the modulus of z,and θ is an argumentof z.
+- To converta complex numberfrom polar form to Cartesian form youneed to work outvalues of sine andcosine.
+#### 2.5Multiplication and division in polarform
+- polar form is more suited for multiplication anddivision.
+- Productofcomplex numbers in polarform
+  Let z = r(cos θ + i sin θ)and w = s(cos φ + i sin φ). Then
+  zw = rs
+  
+  
+  cos(θ + φ)+ i sin(θ + φ
+- Youdo the same to ﬁndthe productofthree or more complexnumbers in polar form.
+- mber,which gives 1 w = w |w|2 .
+- z = w = = = |w|2 r(cos θ + i sin θ) × s(cos φ − i sin φ) s2 r s r s   cos θ cos φ − i cos θ sinφ + i sin θ cos φ − i2 sin θ sinφ   (cos θ cos φ +sin θ sinφ)+ i(sin θ cos φ − cos θ sin φ) . Recall the angle diﬀerenceidentitiesfor sine andcosine, from Section 4of Unit 4: sin(θ − φ)=sin θ cos φ − cos θ sinφ cos(θ − φ)=cos θ cos φ +sin θ sin φ. Usingthese identities we obtain z w = (cos(θ − φ)+ i sin(θ − φ)).
+  r s Thisshows thatto divide two complexnumbers in polar form, you divide their moduli and subtract theirarguments.
+  Quotientofcomplex numbers in polarform Let z = r(cos θ + i sin θ)and w = s(cos φ + i sin φ). Then z w = (cos(θ − φ)+ i sin(θ − φ)).
+  r s zw
+#### 2.6DeMoivre’sformula
+- powersofcomplexnumbers in polar form.
+- De Moivre’s formula Let z = r(cos θ + i sin θ). Then, forany integer n, zn = rn(cos nθ + i sin nθ).
+### 3 Polynomial equations
+- A polynomialequation is an equation of the form ‘polynomial expression =0’
+#### 3.1Quadratic equations
+- Althoughsome quadratic equationshaveno realsolutions, everyquadratic equation haseitherone or twosolutionsthatare complexnumbers,which we call complexsolutions.
