ethernet switching, review table

--- a/Readwise/Articles/M140 Unit 12.md
+++ b/Readwise/Articles/M140 Unit 12.md
@@ -81,3 +81,56 @@
 - A polynomialequation is an equation of the form ‘polynomial expression =0’
 #### 3.1Quadratic equations
 - Althoughsome quadratic equationshaveno realsolutions, everyquadratic equation haseitherone or twosolutionsthatare complexnumbers,which we call complexsolutions.
+## New highlights added February 16, 2025 at 1:14 PM
+- Thequadraticformula The solutionsofthe quadratic equation az2 + bz + c =0,where a, b and c are real numbers, are given by z = −b ± b2 − 4ac √ .
+  2a
+- Two complex numbers thatare complexconjugates of each other are together calleda complex conjugate pair.
+#### 3.2Roots of complexnumbers
+- In general, anysolution z of the equation zn = a, where a is a complexnumberand n is a positive integer,iscalled an nth root
+- Let’sstart by lookingatequationsofthe form zn =1,such as z3 =1 and z4 =1.Solutionsofequationsofthisform are called roots ofunity;
+- n z5 =1.S
+- Let z = r(cos θ + i sin θ). Also, 1= cos0 + i sin0.Sothe equation is (r(cos θ + i sin θ))5 =cos0+ i sin0.
+- r5(cos 5θ + i sin5θ)= cos0 + i sin0.
+- r5 =1, so r =1.
+- 5θ =0+2mπ =2mπ, where m is an integer.
+- θ = 2mπ 5 , where m is an integer.
+- The solutionsare z0 =cos0+ i sin0 =1 z1 =cos  z2 =cos z3 =cos z4 =cos    2π 5 4π 5 6π 5 8π 5     + i sin + i sin + i sin + i sin     2π 5 4π 5 6π 5 8π 5     .
+- Strategy: To ﬁnd the complex solutionsofthe equation zn = a,where a )= 0 1. Write the unknown z in polar form, in terms of an unknown modulus r andanunknown argument θ,and write the number a in polar form.
+  2. Substitutethe polar forms of z and a into the equation,and apply de Moivre’s formulatoﬁnd the polar form of the left-hand side.
+  3. Compare modulito ﬁnd the value of r.
+  4. Compare arguments to ﬁnd n successive possible values of θ.
+  5. Hencewrite downthe n possiblevalues of z.
+  It is usually convenient to useargumentsinthe interval [0, 2π).
+- Foreach non-zero number a,the equation zn = a has n complex solutions, andthese are equallyspaced around a circle centred on the origin.
+#### 3.3The fundamental theoremofalgebra
+- thefundamental theorem of algebra,which shows thatevery polynomial equation hasatleast one solution.
+- if z1 and z2 are the solutionsofthe quadratic equation az2 + bz + c =0 (theremay be only one solution,inwhich case z1 = z2), then you canfactorise the quadratic az2 + bz + c as az2 + bz + c = a(z − z1)(z − z2).
+- Thefundamentaltheorem of algebra Everypolynomial anzn + an−1zn−1 + ··· + a1z + a0 of degree n ≥ 1 has a factorisation an(z − z1)(z − z2) ··· (z − zn), where z1,z2,... ,zn are complexnumbers,some of which maybe equal to others.
+### 4 Exponential form
+- a more conciseversion of polar form,
+#### 4.1Euler’s formula
+- Thisformulagives a meaning forthe expression eiθ,where θ is a realnumber
+- eiθ =1+ iθ + =1+ iθ + (iθ)2 2!
+  i2θ2 2! + (iθ)3 3!
+  + i3θ3 3! + (iθ)4 4!
+  + i4θ4 4! + + (iθ)5 5!
+  i5θ5 5! + + (iθ)6 6!
+  + i6θ6 6! + i7θ7
+- eiθ =1+ iθ − θ2 2! = 1 −  θ2 2! + − i θ4 4! θ3 3! + − θ6 6! θ4 4! + i + ··· + i  θ5 5! −  θ6 6! − i θ − θ3 3! θ7 7! + + ··· θ5 5! − θ7 7! + ··· 
+- Therefore eiθ =cos θ + i sin θ.
+  Thisequation is Euler’sformula.
+- Euler’s formula Let θ be a realnumber. Then eiθ is deﬁnedby Euler’sformula eiθ =cos θ + i sin θ.
+- Thisequation,which is alsosometimescalled Euler’sidentity,isone of the mostfamousequationsinmathematics, because it relates the ﬁve fundamental numbers0,1, i, e and π.
+- Exponential form of a complex number Anon-zero complexnumber z is in exponentialform if it is expressedas z = reiθ, where r is the modulus of z and θ is an argument of z.
+- It’s often bettertouse the exponential form reiθ of acomplex number, ratherthanits polar form r(cos θ + i sin θ), because it’s shorter.
+- reiθ × seiφ = rsei(θ+φ).
+- Similarly,deMoivre’s formula,
+-  reiθ n = rneinθ.
+- e−iθ =cos(−θ)+ i sin(−θ).
+- cos(−θ)=cos θ andsin(−θ)= − sin θ,
+- e−iθ =cos θ − i sin θ
+- he complexconjugateof eiθ is e−iθ.
+#### 4.2Trigonometric identities from de Moivre’s formulaand Euler’s formula
+- Oneway to ﬁnd new trigonometric identities is to usethe special case of de Moivre’s formula
+- Special case of de Moivre’s formula cos nθ + i sin nθ =(cos θ + i sin θ)n
+- cos θ = sin θ = eiθ + e−iθ 2 eiθ − e−iθ 2i
